--- a/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
+++ b/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
@@ -240,13 +240,16 @@ stages:
     # then rename $(Build.SourcesDirectory)/onnxruntime as $(Build.SourcesDirectory)
     - template: templates/get-docker-image-steps.yml
       parameters:
-        Dockerfile: tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_rocm
+        Dockerfile: tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_rocm
         Context: tools/ci_build/github/linux/docker
         DockerBuildArgs: >-
           --build-arg INSTALL_DEPS_EXTRA_ARGS=-tmur
           --build-arg BUILD_UID=$(id -u)
-          --network=host
+          --network=host --build-arg POLICY=manylinux2014 --build-arg PLATFORM=x86_64
           --build-arg ROCM_VERSION=$(RocmVersion)
+          --build-arg DEVTOOLSET_ROOTPATH=/opt/rh/devtoolset-10/root
+          --build-arg PREPEND_PATH=/opt/rh/devtoolset-10/root/usr/bin:
+          --build-arg LD_LIBRARY_PATH_ARG=/opt/rh/devtoolset-10/root/usr/lib64:/opt/rh/devtoolset-10/root/usr/lib:/opt/rh/devtoolset-10/root/usr/lib64/dyninst:/opt/rh/devtoolset-10/root/usr/lib/dyninst:/usr/local/lib64:/usr/local/lib
         Repository: onnxruntimetrainingrocmbuild-rocm$(RocmVersion)
 
     - template: templates/set-version-number-variables-step.yml
