--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_rocm
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_rocm
@@ -10,7 +10,7 @@ ARG ROCM_VERSION=5.5
 
 #Add our own dependencies
 ADD scripts /tmp/scripts
-RUN /tmp/scripts/setup_rocm_yum_repo.sh
+RUN /tmp/scripts/setup_rocm_yum_repo.sh -r ${ROCM_VERSION}
 
 # Set ENV
 ENV PATH=/opt/rocm/hcc/bin:/opt/rocm/hip/bin:/opt/rocm/bin${PATH:+:${PATH}}
