--- a/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
+++ b/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
@@ -245,7 +245,7 @@ stages:
         DockerBuildArgs: >-
           --build-arg INSTALL_DEPS_EXTRA_ARGS=-tmur
           --build-arg BUILD_UID=$(id -u)
-          --network=host --build-arg POLICY=manylinux2014 --build-arg PLATFORM=x86_64
+          --network=host --build-arg POLICY=manylinux_2_28 --build-arg PLATFORM=x86_64
           --build-arg ROCM_VERSION=$(RocmVersion)
           --build-arg DEVTOOLSET_ROOTPATH=/opt/rh/devtoolset-12/root
           --build-arg PREPEND_PATH=/opt/rh/devtoolset-12/root/usr/bin:
