--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_cuda11_8_tensorrt8_6
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_cuda11_8_tensorrt8_6
@@ -1,3 +1,4 @@
+# This file is deprecated and will be replaced by tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_cuda
 ARG BASEIMAGE=nvidia/cuda:11.8.0-devel-ubi8
 ARG POLICY=manylinux_2_28
 ARG PLATFORM=x86_64
